# caissify-explorer

./: CONTEXT.md  Cargo.toml  Dockerfile  PGN_IMPORT_SYNCCOM.md  docker-compose.yml  import-entrypoint.sh  railway.toml
doc/: ROADMAP.md
doc/external-api/: caissifydb.json
doc/scripts/: download_test.py  extract_har.py  har.har  lichess_broadcast_service.py  player_linking_service.py
import-pgn/: Cargo.toml
src/: db.rs  main.rs  openapi.rs  opening.rs  state.rs  tasks.rs
src/api/: error.rs  mod.rs  query.rs
src/handlers/: admin.rs  caissify.rs  fide.rs  lichess.rs  masters.rs  mod.rs  player.rs
src/indexer/: caissify.rs  chess_results.rs  fide_indexer.rs  mod.rs  pgn_url.rs
src/model/: caissify_meta.rs  date.rs  fide.rs  game_id.rs  key.rs  masters.rs  mod.rs
