[package]
name = "caissify-explorer"
version = "0.1.0"
publish = false
description = "Chess opening explorer for the Caissify platform"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env", "deprecated"] }
csv = "1"
env_logger = "0.11"
fastrand = "2"
futures-util = "0.3"
log = "0.4"
moka = { version = "0.12", features = ["future"] }
nohash-hasher = "0.2"
partial_sort = "1"
pgn-reader = "0.29"
pin-project-lite = "0.2"
reqwest = { version = "0.12", features = ["stream"] }
rocksdb = { version = "0.24", features = ["io-uring", "lz4", "zstd", "jemalloc", "bindgen-runtime"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["time_0_3"] }
sha-1 = "0.10"
shakmaty = { version = "0.30", features = ["variant", "nohash-hasher"] }
quick-xml = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }
zstd = "0.13"
sync_wrapper = "1"
thin-vec = "0.2"
thiserror = "2"
tikv-jemallocator = "0.6" # matching rocksdb
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["set-header"] }

[dev-dependencies]
quickcheck = "1"
iai = { version = "0.1", git = "https://github.com/sigaloid/iai", rev = "d56a5971f6d5556cd9e9b92e7e0f753c9ce9cdc7" }

[profile.release]
lto = true

[[bench]]
name = "benches"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tokio_unstable)"] }
